add meal entry form

--- a/bin/weight.eml.html
+++ b/bin/weight.eml.html
@@ -11,7 +11,7 @@ let html_weight req =
                     <label for="weight" class="font-bold">Enter weight:</label>
                     <input
                         id="weight"
-                        type="text"
+                        type="number"
                         name="weight"
                         class="rounded-l px-2 py-4"
                         autofocus
